--- a/spaces.html
+++ b/spaces.html
@@ -64,10 +64,47 @@
 
 		    <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 		      <div class="card-body">
-		        <div class="text-center">
-				    <span class="min-chart" id="chart-sales" data-percent="83"><span class="percent"></span></span>
-				    <h5><span class="label green">Battery<i class="fa fa-arrow-circle-up"></i></span></h5>
+		        <h3 class="space_header">Jack's Office</h3>
+		         <div class="outlet col-sm-12">
+		        	<h5>Left Outlet</h5>
+		        	<div class="progress col-sm-9">
+  						<div class="progress-bar" role="progressbar" aria-valuenow="70"
+  						aria-valuemin="0" aria-valuemax="100" style="width:83%">
+  						  83%
+  						</div>
+  					</div>
 				</div>
+		        <div class="outlet col-sm-12">
+		        	<h5>Right Outlet</h5>
+		        	<div class="progress col-sm-9">
+  						<div class="progress-bar" role="progressbar" aria-valuenow="70"
+  						aria-valuemin="0" aria-valuemax="100" style="width:54%">
+  						  54%
+  						</div>
+  					</div>
+  					<div class="col-sm-4">
+  						<h6>Right Outlet A/C</h6>
+		        		<label class="switch">
+ 						 	<input type="checkbox">
+ 						 	<span class="slider round"></span>
+						</label>
+					</div>
+					<div class="col-sm-4">
+  						<h6>Left Outlet A/C</h6>
+		        		<label class="switch">
+ 						 	<input type="checkbox">
+ 						 	<span class="slider round"></span>
+						</label>
+					</div>
+					<div class="col-sm-4">
+  						<h6>LED</h6>
+		        		<label class="switch">
+ 						 	<input type="checkbox">
+ 						 	<span class="slider round"></span>
+						</label>
+					</div>
+				</div>
+
 		      </div>
 		    </div>
 		  </div>
